--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
     <header>Gabriel's Etch-a-Sketch</header>
-    <div id="container">
-
-
-
-
-
-
+    <div class = 'buttonsContainer'>
+    <button id = 'resetButton'>Reset</button>
+    <div id="slideContainer">
+        <input type="range" min="2" max="100" value="16" class="slider" id="myRange">
+    </div>
+    </div>
+    <div id = "gridContainer">
 
     </div>
+ 
 </body>
 </html>
